# text_classifier

./: pyproject.toml  text_classifier.ipynb
.ipynb_checkpoints/: text_classifier-checkpoint.ipynb
