[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["amarh-ayman <amarhbishtawi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.5"
jupyterlab = "^3.0.16"
sklearn = "^0.0"
numpy = "^1.21.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
